<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="8dp"
    android:gravity="center_horizontal">

    <ImageView
        android:id="@+id/imageProduct"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:contentDescription="@string/description"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_product_list" />

    <TextView
        android:id="@+id/textName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/product"
        android:textStyle="bold"
        android:textSize="14sp"
        android:gravity="center"
        android:layout_marginTop="6dp" />

    <TextView
        android:id="@+id/textPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/price"
        android:textSize="12sp"
        android:textColor="#888888"
        android:gravity="center"
        android:layout_marginTop="2dp" />

</LinearLayout>
