<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="12dp"
    android:gravity="center_vertical">

    <ImageView
        android:id="@+id/imageProduct"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:contentDescription="@string/description"
        android:src="@drawable/ic_product_list"
        android:scaleType="centerCrop"
        android:layout_marginEnd="16dp" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1">

        <TextView
            android:id="@+id/textName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/product"
            android:textSize="15sp"
            android:layout_marginBottom="4dp" />

        <TextView
            android:id="@+id/textPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="11sp"
            android:textColor="#888888"
            android:text="@string/cart" />
    </LinearLayout>
    <ImageView
        android:id="@+id/btnAddCard"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:contentDescription="@string/description"
        android:src="@drawable/ic_cart"
        android:scaleType="centerCrop"
        android:layout_marginEnd="16dp" />
</LinearLayout>
