<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:padding="16dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/buttonBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="48dp"
            android:minHeight="48dp"
            android:padding="12dp"
            android:src="@drawable/ic_back"
            android:contentDescription="@string/description"
            android:clickable="true"
            android:focusable="true"/>

        <ImageView
            android:id="@+id/imageProduct"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:contentDescription="@string/description"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_product_list" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginTop="12dp">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textProductName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/product"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textProductPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/price"
                    android:textSize="16sp"
                    android:textColor="#009688"
                    android:layout_marginTop="4dp" />
            </LinearLayout>

            <ImageView
                android:id="@+id/buttonCart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="48dp"
                android:minHeight="48dp"
                android:padding="12dp"
                android:src="@drawable/ic_cart"
                android:contentDescription="@string/description"
                android:clickable="true"
                android:focusable="true" />

            <ImageView
                android:id="@+id/buttonWishlist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="48dp"
                android:minHeight="48dp"
                android:padding="12dp"
                android:src="@drawable/ic_wishlist"
                android:contentDescription="@string/description"
                android:clickable="true"
                android:focusable="true" />
        </LinearLayout>


        <TextView
            android:id="@+id/textSpecsTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/specs"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_marginTop="16dp" />

        <LinearLayout
            android:layout_gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                tools:ignore="UselessParent">

                <TextView
                    android:id="@+id/textSpecOS"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/description"
                    android:layout_marginTop="8dp" />

                <TextView
                    android:id="@+id/textSpecCPU"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/description" />

                <TextView
                    android:id="@+id/textSpecMemory"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/description" />

                <TextView
                    android:id="@+id/textSpecScreenSize"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/description" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
</ScrollView>
